# sigma

./: .appveyor.yml  CMakeLists.txt  README.md
sigma/: CMakeLists.txt  connection.cpp  connection.hpp  disconnector.hpp  dummy_mutex.hpp  function_ref.hpp  function_traits.hpp  handle_vector.hpp  parameter_list.hpp  result.hpp  scoped_connection.hpp  signal.hpp  signal_traits.hpp  signature_traits.hpp
tests/: CMakeLists.txt  test_connection.cpp  test_function_ref.cpp  test_function_traits.cpp  test_handle_vector.cpp  test_result.cpp
